# xss-hunter

./: .gitignore  README.md  docker-compose.yml
app/: Cargo.toml  Dockerfile  images.rs  sqlx-data.json
app/frontend/: index.html
app/frontend/static/css/: index.css  login.css
app/frontend/static/js/: builder.js  components.js  dom_vec.js  index.js  navigation.js
app/frontend/static/js/auxiliary/: navigation.js
app/frontend/static/js/components/: AbstractComponent.js  Button.js  ClipCode.js  CodeStack.js  CollectedPage.js  DeleteButton.js
app/frontend/static/js/containers/: AbstractContainer.js  CodeStack.js  dom_vec.js
app/frontend/static/js/views/: AbstractView.js  Dashboard.js  Login.js  Logout.js  PageView.js  Pages.js  Payloads.js  Scripts.js  Settings.js  Welcome.js
app/src/: auth.rs  auxiliary.rs  callback.rs  data.rs  main.rs
app/src/api/: images.rs  mod.rs  pages.rs  payloads.rs  scripts.rs
app/templates/: payloads.json  probe.js
db/: Dockerfile  schema.sql
fileserver/: Cargo.toml  Dockerfile
fileserver/local/: .x  20  21
fileserver/src/: files.rs  main.rs
