[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
axum = "0.5.17"
clap = { version = "4.0.25", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "mysql", "chrono", "macros", "offline"] }
serde = "*"
serde_json = "*"
async-sqlx-session = { version = "0.4.0", features = ["mysql"] }
async-session = "3"
dotenv = "0.15.0"
axum-sessions = "0.3.1"
anyhow = "*"
bcrypt = "0.13"
minijinja = { version = "0.25.0", features = [ "source" ] }
reqwest = { version = "0.11.13", features = ["json"] }
