[package]
name = "fileserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
clap = { version = "4.0.25", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = "0.7.4"
anyhow = "*"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing-subscriber = "0.3.16"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
